--- a/R/quantAb-veyrier-coastal.Rmd
+++ b/R/quantAb-veyrier-coastal.Rmd
@@ -282,10 +282,20 @@ dlc <- dl %>%
             prevroc=mean(posroc),
             prevmix=mean(posmix))
 
+dcorr <- dlc %>%
+  ungroup() %>%
+  group_by(antigen) %>%
+  mutate(corroc=cor(meanmfi,prevroc,method="pearson"),
+         cormix=cor(meanmfi,prevmix,method="pearson")) %>%
+  slice(1)
+
 pmfivprev <- ggplot(data=dlc,aes(x=meanmfi,color=antigen)) +
   facet_grid(~antigen) +
-  geom_point(aes(y=prevroc)) +
+  geom_point(aes(y=prevroc),alpha=0.7) +
   geom_smooth(aes(y=prevroc),method="glm",color="gray40",lwd=0.5,se=FALSE) +
+  geom_text(data=dcorr,
+            aes(x=3,y=0.1,label=paste("r ==",sprintf("%1.2f",corroc)) ),
+            parse=TRUE,col="grey30",hjust=0) +
   scale_y_continuous(breaks=seq(0,0.8,by=0.1),labels=seq(0,80,by=10))+
   coord_cartesian(ylim=c(0,0.8),xlim=c(2,3.75)) +
   labs(x="community mean log10 MFI",y="community seroprevalence (%)") +
@@ -296,11 +306,17 @@ pmfivprev
 # include estimates using mixture model based cutoff
 pmfivprev2 <- ggplot(data=dlc,aes(x=meanmfi,color=antigen)) +
   facet_grid(~antigen) +
-  geom_point(aes(y=prevroc)) +
+  geom_point(aes(y=prevroc),alpha=0.7) +
   geom_smooth(aes(y=prevroc),method="glm",color="gray40",lwd=0.5,se=FALSE) +
+  geom_text(data=dcorr,
+            aes(x=2.5,y=0.1,label=paste("r_roc ==",sprintf("%1.2f",corroc)) ),
+            parse=TRUE,col="grey30",hjust=0) +
   
   geom_point(aes(y=prevmix),shape=21) +
   geom_smooth(aes(y=prevmix),method="glm",color="gray40",lty=2,lwd=0.5,se=FALSE) +
+  geom_text(data=dcorr,
+            aes(x=2.5,y=0.05,label=paste("r_mix ==",sprintf("%1.2f",cormix)) ),
+            parse=TRUE,col="grey30",hjust=0) +
   
   scale_y_continuous(breaks=seq(0,0.8,by=0.1),labels=seq(0,80,by=10))+
   coord_cartesian(ylim=c(0,0.8),xlim=c(2,3.75)) +
