--- a/R/quantAb-veyrier-mbita.Rmd
+++ b/R/quantAb-veyrier-mbita.Rmd
@@ -20,6 +20,7 @@ here()
 library(tidyverse)
 library(mgcv)
 library(foreach)
+library(gridExtra)
 
 # grab some colors for plotting
 ggplotcols <- scales::hue_pal()(3)
@@ -35,7 +36,7 @@ corange <- "#EEA722"
 cyellow <- "#FFEE33"
 cgrey <- "#777777"
 
-pcols <- c(cgrey,corange,ggplotcols)
+pcols <- c(ggplotcols,cmagent,corange)
 
 ```
 
@@ -57,7 +58,7 @@ d <- d %>%
 dl <- d %>%
   select(year,community,wat01,toi01,age,agecat,msp1,sea,nie,ashb,vsp5) %>%
   gather(key=antigen,value=mfi,-year,-community,-wat01,-toi01,-age,-agecat) %>%
-  mutate(antigen = factor(antigen,levels=c("msp1","vsp5","ashb","nie","sea"))) %>%
+  mutate(antigen = factor(antigen,levels=c("ashb","nie","sea","msp1","vsp5"))) %>%
   group_by(year,community,antigen) %>%
   arrange(year,community,antigen,age)
 
@@ -246,10 +247,10 @@ fit_mfi <- bind_rows(fit_msp1ci,fit_vsp5ci,fit_ashbci,fit_nieci,fit_seaci)
 
 pagemfi <- ggplot(data=fit_mfi,aes(x=age,y=fit,color=antigen)) +
   facet_grid(~antigen) +
-  geom_point(aes(x=age,y=logmfi),color="black",alpha=0.1,size=0.2)+
+  geom_point(aes(x=age,y=logmfi),alpha=0.1,size=0.2)+
   geom_ribbon(aes(ymin=lwrS,ymax=uprS),alpha=0.2,color=NA,fill="black") +
-  geom_line(lwd=0.5,alpha=0.5) +
-  geom_smooth(method="loess",se=FALSE,lwd=0.5) +
+  geom_line(lwd=0.5,alpha=0.5,color="black") +
+  geom_smooth(method="loess",se=FALSE,lwd=0.5,color="black") +
   scale_color_manual(values=pcols)+
   scale_y_continuous(breaks=seq(0,4,by=1))+
   labs(x="age, years",y="log10 Luminex Response (MFI-bg)") +
@@ -372,3 +373,189 @@ pmfivprev <- ggplot(data=dlc,aes(x=meanmfi,color=antigen)) +
 pmfivprev
 
 ```
+
+# Comparison with FOI
+
+## Constant rate model
+Estimate community-level FOI for P. falciparum S. mansoni based on the seroconversion rate (incidence among susceptibles). Assume a constant rate model (i.e., average over all ages).  If we assume a constant force of infection ($\lambda$), equivalent to assuming an exponential model, then it can be shown that a generalized linear model with a complementary log-log link fit with current status, age-prevalence data is equivalent to an exponential proportional hazards model (*Jewell and van der Laan 1995*). 
+
+$\log - \log(1-P(Y|A,W)) = \log \lambda + \log A + \beta W$
+
+Moroever, this model is also equivalent to a catalytic, SIR model with a single, constant rate parameter (*Hens et al. 2010*; *Hens et al. 2012*).
+
+```{r  foi estimation for msp and sea}
+
+foi_ests <- foreach(ai=c("sea","msp1"),.combine=rbind) %:%
+  foreach(comi=levels(dl$community),.combine=rbind) %do% {
+  
+  di <- dl %>% filter(antigen==ai & community==comi)
+  gfit <- glm(seropos~1,offset=log(age),data=di,family=binomial(link="cloglog"))
+  gsum <- summary(gfit)
+  lambda <- as.numeric(exp(gfit$coefficients))
+  log_lambda_se  <- sqrt(gsum$cov.unscaled)
+  lambda_lb <- as.numeric(exp(gfit$coefficients - 1.96*log_lambda_se))
+  lambda_ub <- as.numeric(exp(gfit$coefficients + 1.96*log_lambda_se))
+  res <- data.frame(community=comi,antigen=ai,lambda,lambda_lb,lambda_ub)
+  return(res)
+}
+
+foi_ests
+
+```
+
+
+
+```{r merge foi estimates}
+# merge FOI estimates to the cluster-level means
+d_foi <- dlc %>%
+  filter(antigen=="sea"|antigen=="msp1") %>%
+  left_join(foi_ests,by=c("community","antigen")) %>%
+  mutate(antigen=factor(antigen,levels=c("ashb","sea","msp1")))
+
+
+# estimate spearman correlation
+dfoicorr <- d_foi %>%
+  ungroup() %>%
+  group_by(antigen) %>%
+  mutate(cormfi=cor(meanmfi,lambda,method="spearman"),
+         corprev=cor(prevroc,lambda,method="spearman")) %>%
+  slice(1)
+
+```
+
+Figure of results
+```{r foi vs mfi figure}
+pfoivmfi <- ggplot(data=d_foi,aes(x=meanmfi,y=lambda,color=antigen)) +
+  facet_grid(~antigen)+
+  geom_point(,alpha=0.7) +
+  # geom_smooth(method="glm",color="gray40",lwd=0.5,se=FALSE) +
+  geom_smooth(method="loess",color="gray40",lwd=0.5,se=FALSE) +
+  geom_text(data=dfoicorr,
+            aes(x=2.5,y=0.6,label=paste("rho ==",sprintf("%1.2f",cormfi)) ),
+            parse=TRUE,col="grey30") +
+  scale_x_continuous(breaks=2:4)+
+  scale_color_manual(values=pcols[c(3,4)])+
+  coord_cartesian(xlim=c(2,4.5),ylim=c(0,0.7)) +
+  labs(x="community mean log10 MFI",y=expression(paste("community seroconversion rate (",lambda,")"))) +
+  theme_minimal() +
+  theme(legend.position="none")
+pfoivmfi
+```
+```{r foi vs prev figure}
+pfoivprev <- ggplot(data=d_foi,aes(x=prevroc,y=lambda,color=antigen)) +
+  facet_grid(~antigen)+
+  geom_point(alpha=0.7) +
+  # geom_smooth(method="glm",color="gray40",lwd=0.5,se=FALSE) +
+  geom_smooth(method="loess",color="gray40",lwd=0.5,se=FALSE) +
+  geom_text(data=dfoicorr,
+            aes(x=0.2,y=0.6,label=paste("rho ==",sprintf("%1.2f",corprev)) ),
+            parse=TRUE,col="grey30") +
+  scale_x_continuous(breaks=seq(0,1,by=0.2),labels=seq(0,100,by=20))+
+  scale_color_manual(values=pcols[c(3,4)])+
+  coord_cartesian(xlim=c(0,1),ylim=c(0,0.7)) +
+  labs(x="community seroprevalence (%)",y=expression(paste("community seroconversion rate (",lambda,")"))) +
+  theme_minimal() +
+  theme(legend.position="none")
+pfoivprev
+
+
+```
+
+## Semiparametric rate model
+
+Semiparametric estimates provide age-specific rates. To compare the estimator with constant rate models, we can average over the empirical distribution of age in the study population.  
+$\hat{\lambda} = \int_a \lambda(a) P(A=a)$
+
+```{r pop avg foi from gam}
+# # ----------------------------
+# # function to estimate the
+# # average FOI over empirical
+# # age distribution
+# # the predictions are based
+# # on a spline fit and its
+# # derivative
+# # gridA is a grid of predicted
+# # ages
+# # pA is the empirical
+# # age distribution
+# # ----------------------------
+# 
+# pAfoi <- function(m,gridA,pA,eps=1e-07,level=0.95,nreps=10000) {
+#   
+#   # variance-covariance matrix from the spline fit
+#   # unconditional on the fit of the mean
+#   # this is slightly more conservative and with better coverage
+#   # properties. 
+#   # See Marra G, Wood SN. 
+#   # Coverage Properties of Confidence Intervals 
+#   # for Generalized Additive Model Components.   
+#   # Scand Stat Theory Appl. 2012;39: 53–74.
+#   Vb <- vcov(m,unconditional = TRUE)
+#   
+#   # calculate the linear predictor, g(Ft), and its pointwise SE
+#   pred <- predict(m, newdata=gridA, se.fit = TRUE)
+#   Ft <- pred$fit
+#   Ft.se <- pred$se.fit
+# 
+#   # calculate the derivative, g'(Ft), using
+#   # finite differences and its pointwise SE
+#   # ?mgcv::predict.gam includes an example of this
+#   X0 <- predict(m, gridA, type = "lpmatrix")
+#   gridA2 <- gridA+eps
+#   X1 <- predict(m,gridA2,type='lpmatrix')
+#   Xp <- (X1 - X0) / eps
+#   ft <- Xp %*% coef(m)
+#   ft.se <- rowSums(Xp %*% Vb * Xp)^0.5
+#   
+#   # parametric bootstrap simulation from the
+#   # model coefficient estimates, assuming the model is true
+#   # FOI is the derivative of the linear predictor
+#   # multiplied by the predicted probability, Ft
+#   sims<- MASS::mvrnorm(n = nreps, mu = coef(m), Sigma = Vb)
+#   Ft.bs <- X0 %*% t(sims)
+#   ft.bs <- Xp %*% t(sims)
+#   foi.bs <- ft.bs*(exp(Ft.bs)/(1+exp(Ft.bs)))
+#   
+#   # merge the parametric bootstrap draws to the empirical 
+#   # distribution
+#   foi.bs <- data.frame(age=gridA$age,foi.bs)
+#   pA_foi.bs <- left_join(data.frame(age=pA),foi.bs,by="age") %>%
+#     select(-age)
+#   
+#   # Average over age for each bootstrap replication
+#   foi_bs <- colMeans(pA_foi.bs,na.rm=T)
+#   
+#   # estimate mean and 
+#   # percentile based 95% CIs
+#   foi <- mean(foi_bs)
+#   foi.se <- sd(foi_bs)
+#   foi.ci <- quantile(foi_bs,probs=c(0.025,0.975))  
+# 
+#   # return objects
+#   list(foi=foi,foi.se=foi.se,foi.ci=foi.ci,model=m,gridA=gridA,pA=pA)
+#   
+# }
+
+
+# # FOI from spline fits
+# agegrid <- data.frame(age=unique(dl$age))
+# popavgfoi <- foreach(ab=c("sea","msp1"),.combine=rbind) %:% 
+#   foreach(comi=levels(dl$community),.combine=rbind) %do%{
+#     pd <- dl %>% filter(antigen==ai & community==comi)
+#     mi <- mgcv::gam(seropos~s(age,bs="cr"),data=pd,family="binomial")
+#     foii <- pAfoi(m=mi,gridA=agegrid,pA=pd$age)
+#     di <- data.frame(antigen=ab,community=comi,
+#                      foi=foii$foi,
+#                      foi_se=foii$foi.se,
+#                      foi_lb=foii$foi.ci[1],
+#                      foi_ub=foii$foi.ci[2])
+#     return(di)
+# }
+# 
+# 
+# # merge semiparametric FOI estimates to the previous estimates
+# popavgfoi <- popavgfoi %>% mutate(community=factor(community))
+# d_spfoi <- left_join(d_foi,popavgfoi,by=c("antigen","community"))
+
+```
+
