--- a/R/quantAb-veyrier-coastal.Rmd
+++ b/R/quantAb-veyrier-coastal.Rmd
@@ -18,6 +18,7 @@ library(here)
 here()
 
 library(tidyverse)
+library(foreach)
 library(mgcv)
 ```
 
@@ -60,6 +61,22 @@ dl <- dl %>%
 
 
 # Age stratified distributions
+
+```{r density plot ashb}
+ggplotcols <- scales::hue_pal()(3)
+pdistashb <- ggplot(data=filter(dl,antigen=="ashb"),aes(x=logmfi,fill=antigen)) +
+  geom_density(alpha=0.5,color=NA) +
+  geom_vline(aes(xintercept = roccut),lty=1) +
+  scale_fill_manual(values=ggplotcols[1])+
+  scale_x_continuous(breaks=0:4,labels=c(expression(10^0),expression(10^1),expression(10^2),expression(10^3),expression(10^4))) +
+  labs(x="luminex response (MFI-bg)", title="Ascaris spp. AsHb") +
+  theme_minimal() + 
+  theme(legend.position = "none",
+        strip.text.y=element_text(angle=0))
+
+pdistashb
+
+```
 
 ```{r density plot by age}
 
@@ -202,10 +219,10 @@ fit_mfi <- bind_rows(fit_ashbci,fit_nieci,fit_seaci)
 
 pagemfi <- ggplot(data=fit_mfi,aes(x=age,y=fit,color=antigen)) +
   facet_grid(~antigen) +
-  geom_point(aes(x=age,y=logmfi),color="black",alpha=0.1,size=0.2)+
+  geom_point(aes(x=age,y=logmfi),alpha=0.1,size=0.2)+
   geom_ribbon(aes(ymin=lwrS,ymax=uprS),alpha=0.2,color=NA,fill="black") +
-  geom_line(lwd=0.5,alpha=0.5) +
-  geom_smooth(method="loess",se=FALSE,lwd=0.5) +
+  geom_line(lwd=0.5,alpha=0.5,color="black") +
+  geom_smooth(method="loess",se=FALSE,lwd=0.5,color="black") +
   scale_y_continuous(breaks=seq(0,4,by=1))+
   labs(x="age, years",y="log10 Luminex Response (MFI-bg)") +
   theme_minimal() +
@@ -325,3 +342,86 @@ pmfivprev2 <- ggplot(data=dlc,aes(x=meanmfi,color=antigen)) +
   theme(legend.position="none")
 pmfivprev2
 ```
+# Comparison with FOI
+
+## Constant rate model
+Estimate community-level FOI for P. falciparum S. mansoni based on the seroconversion rate (incidence among susceptibles). Assume a constant rate model (i.e., average over all ages).  If we assume a constant force of infection ($\lambda$), equivalent to assuming an exponential model, then it can be shown that a generalized linear model with a complementary log-log link fit with current status, age-prevalence data is equivalent to an exponential proportional hazards model (*Jewell and van der Laan 1995*). 
+
+$\log - \log(1-P(Y|A,W)) = \log \lambda + \log A + \beta W$
+
+Moroever, this model is also equivalent to a catalytic, SIR model with a single, constant rate parameter (*Hens et al. 2010*; *Hens et al. 2012*).
+
+```{r  foi estimation for msp and sea}
+
+foi_ests <- foreach(ai=c("ashb","nie","sea"),.combine=rbind) %:%
+  foreach(comi=levels(dl$community),.combine=rbind) %do% {
+  
+  di <- dl %>% filter(antigen==ai & community==comi)
+  gfit <- glm(seropos~1,offset=log(age),data=di,family=binomial(link="cloglog"))
+  gsum <- summary(gfit)
+  lambda <- as.numeric(exp(gfit$coefficients))
+  log_lambda_se  <- sqrt(gsum$cov.unscaled)
+  lambda_lb <- as.numeric(exp(gfit$coefficients - 1.96*log_lambda_se))
+  lambda_ub <- as.numeric(exp(gfit$coefficients + 1.96*log_lambda_se))
+  res <- data.frame(community=comi,antigen=ai,lambda,lambda_lb,lambda_ub)
+  return(res)
+}
+
+foi_ests
+
+```
+
+```{r merge foi estimates}
+# merge FOI estimates to the cluster-level means
+d_foi <- dlc %>%
+  left_join(foi_ests,by=c("community","antigen")) %>%
+  mutate(antigen=factor(antigen,levels=c("ashb","nie","sea")))
+
+
+# estimate spearman correlation
+dfoicorr <- d_foi %>%
+  ungroup() %>%
+  group_by(antigen) %>%
+  mutate(cormfi=cor(meanmfi,lambda,method="pearson"),
+         corprev=cor(prevroc,lambda,method="pearson")) %>%
+  select(antigen,cormfi,corprev) %>%
+  slice(1)
+
+```
+
+
+Figure of results
+```{r foi vs mfi figure}
+pfoivmfi <- ggplot(data=d_foi,aes(x=meanmfi,y=lambda,color=antigen)) +
+  facet_grid(~antigen)+
+  geom_point(,alpha=0.7) +
+  geom_smooth(method="glm",color="gray40",lwd=0.5,se=FALSE) +
+  geom_text(data=dfoicorr,
+            aes(x=3,y=0.05,label=paste("r ==",sprintf("%1.2f",cormfi)) ),
+            parse=TRUE,col="grey30") +
+  scale_x_continuous(breaks=2:4)+
+  coord_cartesian(xlim=c(2,4),ylim=c(0,0.05)) +
+  labs(x="community mean log10 MFI",y=expression(paste("community seroconversion rate (",lambda,")"))) +
+  theme_minimal() +
+  theme(legend.position="none")
+pfoivmfi
+```
+```{r foi vs prev figure}
+pfoivprev <- ggplot(data=d_foi,aes(x=prevroc,y=lambda,color=antigen)) +
+  facet_grid(~antigen)+
+  geom_point(alpha=0.7) +
+  geom_smooth(method="glm",color="gray40",lwd=0.5,se=FALSE) +
+  geom_text(data=dfoicorr,
+            aes(x=0.5,y=0.05,label=paste("r ==",sprintf("%1.2f",corprev)) ),
+            parse=TRUE,col="grey30") +
+  scale_x_continuous(breaks=seq(0,1,by=0.2),labels=seq(0,100,by=20))+
+  # scale_color_manual(values=pcols[c(3,4)])+
+  coord_cartesian(xlim=c(0,1),ylim=c(0,0.05)) +
+  labs(x="community seroprevalence (%)",y=expression(paste("community seroconversion rate (",lambda,")"))) +
+  theme_minimal() +
+  theme(legend.position="none")
+pfoivprev
+
+
+```
+
