--- a/R/quantAb-veyrier-cambodia.Rmd
+++ b/R/quantAb-veyrier-cambodia.Rmd
@@ -19,6 +19,22 @@ here()
 
 library(tidyverse)
 library(mgcv)
+
+# grab some colors for plotting
+ggplotcols <- scales::hue_pal()(3)
+# bright color blind palette:  https://personal.sron.nl/~pault/ 
+cblack <- "#000004FF"
+cblue <- "#3366AA"
+cteal <- "#11AA99"
+cgreen <- "#66AA55"
+cchartr <- "#CCCC55"
+cmagent <- "#992288"
+cred <- "#EE3333"
+corange <- "#EEA722"
+cyellow <- "#FFEE33"
+cgrey <- "#777777"
+
+pcols <- c(ggplotcols[2:3],cmagent,ggplotcols[1],corange)
 ```
 
 # Load Cambodia measurements
@@ -34,9 +50,9 @@ d <- d %>%
 
 # reshape to long format
 dl <- d %>%
-  select(psuid,age,agecat,pfmsp19,nie,t24) %>%
+  select(psuid,age,agecat,nie,t24,pfmsp19,pvmsp19,ttmb) %>%
   gather(key=antigen,value=mfi,-psuid,-age,-agecat) %>%
-  mutate(antigen = factor(antigen,levels=c("pfmsp19","nie","t24"))) %>%
+  mutate(antigen = factor(antigen,levels=c("nie","t24","pfmsp19","pvmsp19","ttmb"))) %>%
   group_by(psuid,antigen) %>%
   arrange(psuid,antigen,age)
 
@@ -47,9 +63,12 @@ dl <- dl %>%
 # http://journals.plos.org/plosntds/article?id=10.1371/journal.pntd.0004699
 dl$roccut <- NA
 dl$mixcut <- NA
-dl$roccut[dl$antigen %in% "pfmsp19"] <- log10(343)
 dl$roccut[dl$antigen %in% "nie"] <- log10(792)
 dl$roccut[dl$antigen %in% "t24"] <- log10(486)
+dl$roccut[dl$antigen %in% "pfmsp19"] <- log10(343)
+dl$roccut[dl$antigen %in% "pvmsp19"] <- log10(196)
+dl$roccut[dl$antigen %in% "ttmb"] <- log10(100)
+
 
 # define seroprevalence based on ROC cutoffs
 dl <- dl %>%
@@ -69,6 +88,8 @@ pdist <- ggplot(data=dl,aes(x=logmfi,fill=antigen)) +
   geom_density(alpha=0.5,color=NA) +
   geom_vline(aes(xintercept = roccut),lty=1) +
   # geom_vline(aes(xintercept = mixcut),lty=2) +
+  scale_fill_manual(values=pcols)+
+
   labs(x="log10 luminex response (MFI-bg)") +
   theme_minimal() + 
   theme(legend.position = "none",
@@ -81,6 +102,7 @@ pdist2 <- ggplot(data=dl,aes(x=logmfi,fill=antigen)) +
   facet_grid(~antigen) +
   geom_density(alpha=0.5,color=NA) +
   geom_vline(aes(xintercept = roccut),lty=1) +
+  scale_fill_manual(values=pcols)+
   # geom_vline(aes(xintercept = mixcut),lty=2) +
   labs(x="log10 luminex response (MFI-bg)") +
   theme_minimal() + 
@@ -160,12 +182,6 @@ source(here("R","SL.mgcv.R")) # mgcv wrapper for SuperLearner
 
 # k=4
 set.seed(123)
-sld <- filter(dl,antigen=="pfmsp19")
-cv_msp1 <- SuperLearner(Y=sld$logmfi,X=select(sld,age), SL.library = paste("SL.mgcv.k",4:20,sep=""))
-cv_msp1
-
-# k=4
-set.seed(123)
 sld <- filter(dl,antigen=="nie")
 cv_nie <- SuperLearner(Y=sld$logmfi,X=select(sld,age), SL.library = paste("SL.mgcv.k",4:20,sep=""))
 cv_nie
@@ -175,6 +191,24 @@ set.seed(123)
 sld <- filter(dl,antigen=="t24")
 cv_t24 <- SuperLearner(Y=sld$logmfi,X=select(sld,age), SL.library = paste("SL.mgcv.k",4:20,sep=""))
 cv_t24
+
+# k=4
+set.seed(123)
+sld <- filter(dl,antigen=="pfmsp19")
+cv_pfmsp1 <- SuperLearner(Y=sld$logmfi,X=select(sld,age), SL.library = paste("SL.mgcv.k",4:20,sep=""))
+cv_pfmsp1
+
+# k=7
+set.seed(123)
+sld <- filter(dl,antigen=="pvmsp19")
+cv_pvmsp1 <- SuperLearner(Y=sld$logmfi,X=select(sld,age), SL.library = paste("SL.mgcv.k",4:20,sep=""))
+cv_pvmsp1
+
+# k=6
+set.seed(123)
+sld <- filter(dl,antigen=="ttmb")
+cv_ttmb <- SuperLearner(Y=sld$logmfi,X=select(sld,age), SL.library = paste("SL.mgcv.k",4:20,sep=""))
+cv_ttmb
 ```
 
 ## Age dependent means
@@ -191,12 +225,6 @@ cv_t24
 # https://stats.stackexchange.com/questions/189384/predicting-mean-smooth-in-gam-with-smooth-by-random-factor-interaction
 #----------------------------------
 
-# Pf Malaria MSP-1
-fit_msp1 <- mgcv::gam(logmfi~s(age,bs="cr",k=4) + s(psuid,bs="re",by=dummy), 
-                      data=filter(dl,antigen=="pfmsp19"))
-newd <- dl %>% filter(antigen=="pfmsp19") %>% mutate(dummy=0)
-fit_msp1ci <- gamCI(m=fit_msp1,newdata=newd,nreps=10000)
-
 # Strongy NIE
 fit_nie <- mgcv::gam(logmfi~s(age,bs="cr",k=4) + s(psuid,bs="re",by=dummy), 
                       data=filter(dl,antigen=="nie"))
@@ -209,7 +237,27 @@ fit_t24 <- mgcv::gam(logmfi~s(age,bs="cr",k=4) + s(psuid,bs="re",by=dummy),
 newd <- dl %>% filter(antigen=="t24") %>% mutate(dummy=0)
 fit_t24ci <- gamCI(m=fit_t24,newdata=newd,nreps=10000)
 
-fit_mfi <- bind_rows(fit_msp1ci,fit_nieci,fit_t24ci)
+# Pf Malaria MSP-1
+fit_pfmsp1 <- mgcv::gam(logmfi~s(age,bs="cr",k=4) + s(psuid,bs="re",by=dummy), 
+                      data=filter(dl,antigen=="pfmsp19"))
+newd <- dl %>% filter(antigen=="pfmsp19") %>% mutate(dummy=0)
+fit_pfmsp1ci <- gamCI(m=fit_pfmsp1,newdata=newd,nreps=10000)
+
+# Pv Malaria MSP-1
+fit_pvmsp1 <- mgcv::gam(logmfi~s(age,bs="cr",k=7) + s(psuid,bs="re",by=dummy), 
+                      data=filter(dl,antigen=="pvmsp19"))
+newd <- dl %>% filter(antigen=="pvmsp19") %>% mutate(dummy=0)
+fit_pvmsp1ci <- gamCI(m=fit_pvmsp1,newdata=newd,nreps=10000)
+
+# Tetanus toxoid
+fit_ttmb <- mgcv::gam(logmfi~s(age,bs="cr",k=6) + s(psuid,bs="re",by=dummy), 
+                      data=filter(dl,antigen=="ttmb"))
+newd <- dl %>% filter(antigen=="ttmb") %>% mutate(dummy=0)
+fit_ttmbci <- gamCI(m=fit_ttmb,newdata=newd,nreps=10000)
+
+
+
+fit_mfi <- bind_rows(fit_nieci,fit_t24ci,fit_pfmsp1ci,fit_pvmsp1ci,fit_ttmbci)
 
 ```
 
@@ -217,10 +265,11 @@ fit_mfi <- bind_rows(fit_msp1ci,fit_nieci,fit_t24ci)
 
 pagemfi <- ggplot(data=fit_mfi,aes(x=age,y=fit,color=antigen)) +
   facet_grid(~antigen) +
-  geom_point(aes(x=age,y=logmfi),color="black",alpha=0.1,size=0.2)+
+  geom_point(aes(x=age,y=logmfi),alpha=0.2,size=0.2)+
   geom_ribbon(aes(ymin=lwrS,ymax=uprS),alpha=0.2,color=NA,fill="black") +
-  geom_line(lwd=0.5,alpha=0.5) +
-  geom_smooth(method="loess",se=FALSE,lwd=0.5) +
+  geom_line(lwd=0.5,alpha=0.5,color="black") +
+  geom_smooth(method="loess",se=FALSE,lwd=0.5,color="black") +
+  scale_color_manual(values=pcols)+
   scale_y_continuous(breaks=seq(0,4,by=1))+
   labs(x="age, years",y="log10 Luminex Response (MFI-bg)") +
   theme_minimal() +
@@ -234,12 +283,6 @@ pagemfi
 ## Age dependent seroprevalence
 ```{r agecurves seroprev}
 
-# Pf Malaria MSP-1
-fitp_msp1 <- mgcv::gam(seropos~s(age,bs="cr",k=11) + s(psuid,bs="re",by=dummy), family="binomial",
-                      data=filter(dl,antigen=="pfmsp19"))
-newd <- dl %>% filter(antigen=="pfmsp19") %>% mutate(dummy=0)
-fitp_msp1ci <- gamCI(m=fitp_msp1,newdata=newd,nreps=10000)
-
 # Strongy NIE
 fitp_nie <- mgcv::gam(seropos~s(age,bs="cr",k=7) + s(psuid,bs="re",by=dummy), family="binomial", 
                       data=filter(dl,antigen=="nie"))
@@ -252,7 +295,27 @@ fitp_t24 <- mgcv::gam(seropos~s(age,bs="cr",k=9) + s(psuid,bs="re",by=dummy), fa
 newd <- dl %>% filter(antigen=="t24") %>% mutate(dummy=0)
 fitp_t24ci <- gamCI(m=fitp_t24,newdata=newd,nreps=10000)
 
-fit_seroprev <- bind_rows(fitp_msp1ci,fitp_nieci,fitp_t24ci)
+# Pf Malaria MSP-1
+fitp_pfmsp1 <- mgcv::gam(seropos~s(age,bs="cr",k=11) + s(psuid,bs="re",by=dummy), family="binomial",
+                      data=filter(dl,antigen=="pfmsp19"))
+newd <- dl %>% filter(antigen=="pfmsp19") %>% mutate(dummy=0)
+fitp_pfmsp1ci <- gamCI(m=fitp_pfmsp1,newdata=newd,nreps=10000)
+
+# Pv Malaria MSP-1
+fitp_pvmsp1 <- mgcv::gam(seropos~s(age,bs="cr",k=11) + s(psuid,bs="re",by=dummy), family="binomial",
+                      data=filter(dl,antigen=="pvmsp19"))
+newd <- dl %>% filter(antigen=="pvmsp19") %>% mutate(dummy=0)
+fitp_pvmsp1ci <- gamCI(m=fitp_pvmsp1,newdata=newd,nreps=10000)
+
+# Tetanus
+fitp_ttmb <- mgcv::gam(seropos~s(age,bs="cr",k=11) + s(psuid,bs="re",by=dummy), family="binomial",
+                      data=filter(dl,antigen=="ttmb"))
+newd <- dl %>% filter(antigen=="ttmb") %>% mutate(dummy=0)
+fitp_ttmbci <- gamCI(m=fitp_ttmb,newdata=newd,nreps=10000)
+
+
+
+fit_seroprev <- bind_rows(fitp_nieci,fitp_t24ci,fitp_pfmsp1ci,fitp_pvmsp1ci,fitp_ttmbci)
 
 # convert linear predictor to prevalance
 expitfn <- function(x) {
@@ -275,7 +338,8 @@ pageprev <- ggplot(data=fit_seroprev,aes(x=age,y=fit,color=antigen)) +
   geom_ribbon(aes(ymin=lwrS,ymax=uprS),alpha=0.2,color=NA,fill="grey50") +
   geom_line(lwd=0.5,alpha=0.5) +
   geom_smooth(method="loess",se=FALSE,lwd=0.5) +
-  scale_y_continuous(breaks=seq(0,0.8,by=0.1),labels=seq(0,80,by=10))+
+  scale_color_manual(values=pcols)+
+  scale_y_continuous(breaks=seq(0,1,by=0.1),labels=seq(0,100,by=10))+
   labs(x="age, years",y="Seroprevalence (%)") +
   theme_minimal() +
   theme(legend.position="none")
@@ -298,7 +362,7 @@ dlc <- dl %>%
 dcorr <- dlc %>%
   ungroup() %>%
   group_by(antigen) %>%
-  mutate(corxy=cor(meanmfi,prevroc,method="pearson",use="pairwise.complete.obs") ) %>%
+  mutate(corxy=cor(meanmfi,prevroc,method="pearson") ) %>%
   slice(1)
 
 pmfivprev <- ggplot(data=dlc,aes(x=meanmfi,color=antigen)) +
@@ -306,8 +370,9 @@ pmfivprev <- ggplot(data=dlc,aes(x=meanmfi,color=antigen)) +
   geom_point(aes(y=prevroc),alpha=0.7) +
   geom_smooth(aes(y=prevroc),method="glm",color="gray40",lwd=0.5,se=FALSE) +
   geom_text(data=dcorr,
-            aes(x=3.5,y=0.1,label=paste("r ==",sprintf("%1.2f",corxy)) ),
+            aes(x=2,y=1,label=paste("r ==",sprintf("%1.2f",corxy)) ),
             parse=TRUE,col="grey30") +
+  scale_color_manual(values=pcols)+
   scale_y_continuous(breaks=seq(0,1,by=0.1),labels=seq(0,100,by=10))+
   coord_cartesian(ylim=c(0,1),xlim=c(1,4.5)) +
   labs(x="cluster mean log10 MFI",y="cluster seroprevalence (%)") +
