--- a/R/quantAb-mairie-mbita.Rmd
+++ b/R/quantAb-mairie-mbita.Rmd
@@ -55,14 +55,24 @@ d <- readRDS(here("data","mbita_psac.rds"))
 d <- d %>%
   select(year,community=vid,
          pid,age=agey,
-         wat01,toi01,
+         asc_epg,sm_epg,
          ashb,sea,msp1,vsp5) %>%
   mutate(agecat = cut(age,breaks=c(0,1,2,3,4,6),labels=c("<1 year","1 year","2 years","3 years","4 years")))
 
-# reshape to long format
+# reshape KK data to long format
+# the eggs per gram (EPG) measures are grouped by "antigen" 
+# (a wrong label) just to make them easy to merge back to the antibody data
+dlkk <- d %>%
+  select(year,community,pid,asc_epg,sm_epg,) %>%
+  gather(key=antigen,value=epg,-year,-community,-pid) %>%
+  mutate(antigen = factor(antigen,levels=c("asc_epg","sm_epg"),labels=c("ashb","sea"))) %>%
+  group_by(year,community,antigen) %>%
+  arrange(year,community,antigen)
+
+# reshape antibody data to long format
 dl <- d %>%
-  select(year,community,wat01,toi01,age,agecat,ashb,sea,msp1,vsp5) %>%
-  gather(key=antigen,value=mfi,-year,-community,-wat01,-toi01,-age,-agecat) %>%
+  select(year,community,pid,age,agecat,ashb,sea,msp1,vsp5) %>%
+  gather(key=antigen,value=mfi,-year,-community,-pid,-age,-agecat) %>%
   mutate(antigen = factor(antigen,levels=c("ashb","sea","msp1","vsp5"))) %>%
   group_by(year,community,antigen) %>%
   arrange(year,community,antigen,age)
@@ -88,7 +98,11 @@ dl <- dl %>%
                          labels=c("Ascaris spp. AsHb",
                                   "S. mansoni SEA",
                                   "P. falciparum MSP-1",
-                                  "Giardia spp. VSP-5")))
+                                  "Giardia sp. VSP-5")))
+
+
+# merge in the KK measurements for Schisto and Ascaris
+dl <- left_join(dl,dlkk,by=c("year","community","pid","antigen"))
 
 
 ```
@@ -114,11 +128,13 @@ pdist <- ggplot(data=dl,aes(x=logmfi,fill=antigen)) +
 pdist
 
 # limit to just SEA and Giardia for presentation
-pdist2 <- ggplot(data=filter(dl,antigen%in%c("sea","vsp5")),aes(x=logmfi,fill=antigen)) +
+dlp <- dl %>% filter(antigen %in% c("ashb","sea","vsp5") ) %>%
+  mutate(antigenf=factor(antigenf,levels=c("S. mansoni SEA","Giardia sp. VSP-5","Ascaris spp. AsHb")))
+pdist2 <- ggplot(data=dlp,aes(x=logmfi,fill=antigen)) +
   facet_grid(agecat~antigenf) +
   geom_density(alpha=0.75,color=NA) +
   geom_vline(aes(xintercept = roccut),lty=1) +
-  scale_fill_manual(values=pcols[c(2,4)])+
+  scale_fill_manual(values=pcols[c(1,2,4)])+
   # geom_vline(aes(xintercept = mixcut),lty=2) +
   labs(x="log10 luminex response (MFI-bg)") +
   theme_minimal() + 
@@ -128,7 +144,7 @@ pdist2 <- ggplot(data=filter(dl,antigen%in%c("sea","vsp5")),aes(x=logmfi,fill=an
 
 pdist2
 # save png file for presentation
-ggsave(filename=here("output","mbita-ab-dists-sea-vsp.png"),plot=pdist2,device="png",width=5,height=7)
+ggsave(filename=here("output","mbita-ab-dists-ashb-sea-vsp.png"),plot=pdist2,device="png",width=8,height=7)
 
 
 
@@ -415,7 +431,7 @@ ggsave(filename=here("output","mbita-mfi-v-seroprev.png"),plot=pmfivprev,device=
 # Comparison with FOI
 
 ## Constant rate model
-Estimate community-level FOI for P. falciparum S. mansoni based on the seroconversion rate (incidence among susceptibles). Assume a constant rate model (i.e., average over all ages).  If we assume a constant force of infection ($\lambda$), equivalent to assuming an exponential model, then it can be shown that a generalized linear model with a complementary log-log link fit with current status, age-prevalence data is equivalent to an exponential proportional hazards model (*Jewell and van der Laan 1995*). 
+Estimate community-level FOI for pathogens based on the seroconversion rate (incidence among susceptibles). Assume a constant rate model (i.e., average over all ages).  If we assume a constant force of infection ($\lambda$), equivalent to assuming an exponential model, then it can be shown that a generalized linear model with a complementary log-log link fit with current status, age-prevalence data is equivalent to an exponential proportional hazards model (*Jewell and van der Laan 1995*). 
 
 $\log - \log(1-P(Y|A,W)) = \log \lambda + \log A + \beta W$
 
@@ -504,6 +520,103 @@ pfoivprev
 # save png file for presentation
 ggsave(filename=here("output","mbita-prev-v-foi.png"),plot=pfoivprev,device="png",width=8,height=3)
 ```
+
+# Comparison with Kato-Katz
+
+```{r cluster means vs kk}
+
+dlckk <- dl %>%
+  group_by(community,antigenf) %>%
+  filter(antigen %in% c("ashb","sea")) %>%
+  mutate(posroc=ifelse(logmfi>roccut,1,0),
+         logkk=ifelse(epg>0,log10(epg),log10(1)),
+         poskk=ifelse(epg>0,1,0)) %>%
+  summarize(n=n(),
+            meanmfi=mean(logmfi),
+            prevroc=mean(posroc),
+            meankk=mean(logkk,na.rm=T),
+            prevkk=mean(poskk,na.rm=T))
+
+
+# estimate pearson correlation
+dcorrkk <- dlckk %>%
+  ungroup() %>%
+  group_by(antigenf) %>%
+  mutate(corspkk=cor(prevroc,prevkk,method="spearman"),
+         cormukk=cor(meanmfi,prevkk,method="spearman"),
+         cormukkmu=cor(meanmfi,meankk,method="spearman")) %>%
+  slice(1)
+
+```
+
+Figure of results
+
+```{r mfi and prev vs kk}
+# KK prevalence versus MFI
+pmfivkk <- ggplot(data=dlckk,aes(x=prevkk,color=antigenf)) +
+  facet_grid(~antigenf) +
+  geom_point(aes(y=meanmfi),alpha=0.7) +
+  geom_smooth(aes(y=meanmfi),method="loess",color="gray40",lwd=0.5,se=FALSE) +
+  geom_text(data=dcorrkk,
+            aes(x=0,y=4,label=paste("rho ==",sprintf("%1.2f",cormukk)) ),
+            parse=TRUE,col="grey30",hjust=0) +
+  scale_x_continuous(breaks=seq(0,0.6,by=0.2),labels=seq(0,60,by=20))+
+  scale_color_manual(values=pcols)+
+  coord_cartesian(xlim=c(0,0.6),ylim=c(1,4.5)) +
+  labs(y="community mean log10 MFI",x="community prevalence by Kato-Katz (%)") +
+  theme_minimal() +
+  theme(legend.position="none")
+pmfivkk
+
+# save png file for presentation
+ggsave(filename=here("output","mbita-mfi-v-kkprev.png"),plot=pmfivkk,device="png",width=5,height=3)
+
+
+# KK mean versus MFI
+pmfivkkmean <- ggplot(data=dlckk,aes(x=meankk,color=antigenf)) +
+  facet_grid(~antigenf) +
+  geom_point(aes(y=meanmfi),alpha=0.7) +
+  geom_smooth(aes(y=meanmfi),method="loess",color="gray40",lwd=0.5,se=FALSE) +
+  geom_text(data=dcorrkk,
+            aes(x=0,y=4,label=paste("rho ==",sprintf("%1.2f",cormukkmu)) ),
+            parse=TRUE,col="grey30",hjust=0) +
+  scale_x_continuous(breaks=seq(0,1,by=0.2))+
+  scale_color_manual(values=pcols)+
+  coord_cartesian(xlim=c(0,1.1),ylim=c(1,4.5)) +
+  labs(y="community mean log10 MFI",x="community mean log10 eggs per gram (Kato-Katz)") +
+  theme_minimal() +
+  theme(legend.position="none")
+pmfivkkmean
+
+# save png file for presentation
+ggsave(filename=here("output","mbita-mfi-v-kkmean.png"),plot=pmfivkkmean,device="png",width=5,height=3)
+
+# KK prevalence versus seroprevalence
+pspvkk <- ggplot(data=dlckk,aes(x=prevkk,color=antigenf)) +
+  facet_grid(~antigenf) +
+  geom_point(aes(y=prevroc),alpha=0.7) +
+  geom_smooth(aes(y=prevroc),method="loess",color="gray40",lwd=0.5,se=FALSE) +
+  geom_abline(intercept=0,slope=1,lty="dashed",color="gray40",lwd=0.25)+
+  geom_text(data=dcorrkk,
+            aes(x=0.1,y=0.8,label=paste("rho ==",sprintf("%1.2f",corspkk)) ),
+            parse=TRUE,col="grey30",hjust=0) +
+  scale_y_continuous(breaks=seq(0,0.8,by=0.2),labels=seq(0,80,by=20))+
+  scale_x_continuous(breaks=seq(0,0.8,by=0.2),labels=seq(0,80,by=20))+
+  scale_color_manual(values=pcols)+
+  coord_cartesian(ylim=c(0,0.9),xlim=c(0,0.9)) +
+  labs(y="community seroprevalence (%)",x="community prevalence by Kato-Katz (%)") +
+  theme_minimal() +
+  theme(legend.position="none")
+pspvkk
+
+# save png file for presentation
+ggsave(filename=here("output","mbita-serop-v-kkprev.png"),plot=pspvkk,device="png",width=5,height=3)
+
+
+
+
+```
+
 
 # Effect of smaller samples
 
